--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,14 @@ h2 {
   padding: 50px 0;
 }
 
+.container a {
+  color: #0050a0;
+}
+
+.container a:hover {
+  color: #0066cc;
+}
+
 .heading_container {
   display: -webkit-box;
   display: -ms-flexbox;
